# CLUSS-V2

./: .gitignore  CHANGELOG.md  CHECKPOINT.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  __init__.py  install.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
annotation/: uniprot_fetcher.py
clustering/: boundary_detector.py  cluster_extractor.py  cosimilarity.py
evaluation/: go_enrichment.py  q_measure.py
output/: __init__.py  writer.py
preprocessing/: complexity_mask.py  fasta_parser.py  taxon_weights.py
similarity/: sms_engine.py  sms_matrix.py
tests/: test_pipeline_small.py  test_sms_engine.py  test_visualization.py
tree/: phylo_tree.py
visualization/: heatmap.py  tree_plot.py
