[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CLUSS_V2"
version = "2.0.0"
description = "Alignment-free protein sequence clustering (CLUSS+ v2.0)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.81,<2.0",
    "numba>=0.57,<0.62",
    "numpy>=1.24,<3.0",
    "joblib>=1.3,<2.0",
    "scikit-learn>=1.3,<2.0",
    "scipy>=1.10,<2.0",
    "tqdm>=4.65,<5.0",
    "requests>=2.31,<3.0",
    "plotly>=5.15,<6.0",
    "matplotlib>=3.7,<4.0",
    "kneed>=0.8,<1.0",
]

[project.optional-dependencies]
esm = [
    "fair-esm>=2.0.0",
    "torch>=2.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "flake8>=6.1",
    "responses>=0.23",
]

[project.scripts]
"cluss+" = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.setuptools.packages.find]
where   = ["."]
